# dfolks

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env_sample.txt  environment.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr_trigger.yml  publish_package.yml
jobs/: jp_corp_code_list.yaml  wf_edinet_ingestion_fin_report.yaml  wf_jquants_ingestion_fin_report.yaml  wf_jquants_ingestion_industry_report.yaml  wf_jquants_ingestion_stock_price.yaml  wf_yfinance_ingestion_fin_report.yaml  wf_yfinance_ingestion_market_data.yaml  wf_yfinance_ingestion_stock_price.yaml
jobs/Samples/: sample_wf_edinet_ingestion_fin_report.yaml  sample_wf_jquants_ingestion_fin_report.yaml  sample_wf_jquants_ingestion_industry_report.yaml  sample_wf_jquants_ingestion_stock_price.yaml  sample_wf_yfinance_ingestion_fin_report.yaml  sample_wf_yfinance_ingestion_market_data.yaml  sample_wf_yfinance_ingestion_stock_price.yaml
src/dfolks/: __init__.py
src/dfolks/core/: __init__.py  chain.py  classfactory.py  execute.py  mixin.py  modules.py  utils.py
src/dfolks/data/: __init__.py  data.py  dataprep.py  edinet_apis.py  input.py  jquants_apis.py  output.py  yfinance_apis.py
src/dfolks/parsers/: __init__.py  simpleparser.py  xbrlparser.py
src/dfolks/process/: __init__.py
src/dfolks/schema/: schema_edinet_fin_report.yaml  schema_jquants_fin_report.yaml  schema_jquants_industry_report.yaml  schema_jquants_stock_price.yaml  schema_yfinance_balance_sheet.yaml  schema_yfinance_cash_flow.yaml  (+3 more)
(+34 files in other folders)
